Update and rename clash to clash.ini

--- a/clash.ini
+++ b/clash.ini
@@ -1,3 +1,14 @@
+[custom]
+自用修改版
+
+;自动测速：支持
+;微软分流：支持
+;苹果分流：支持
+;Netflix、DisneyPlus分流：支持
+;增强中国IP段：支持
+;增强国外GFW：支持
+exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|分割线|残り使用容量|有効期限|リセット|故障转移|距离下次重置|IPV6|重置|流量|用户|本站|漏洞|永久虚通路|车|邀|免翻|邀请|eevpn|域名|机场|刷新|禁止|备用登录|计划|面板|忘记|到期|套餐|官网|更多|关注|25倍率|http|增加|持续|渠道|购买|QQ|Ins|二手)
+
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
