--- a/clash.ini
+++ b/clash.ini
@@ -60,46 +60,30 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🐸 手动切换
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🎥 奈飞节点`[]🐸 手动切换
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
+;设置分组标志位
+custom_proxy_group=🚀 节点选择`select`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他`[]DIRECT
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`30,,100
+custom_proxy_group=🥇 手动选择`select`.*
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他
+custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]DIRECT`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他`.*
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他`[]DIRECT`.*
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他
+custom_proxy_group=📲 谷歌Play`select`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🎏 ‍其他`[]DIRECT`.*
+custom_proxy_group=🤖 GPT`select`[]🇺🇲 ‍美国自动`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🎏 ‍其他`[]DIRECT`.*
+custom_proxy_group=👨‍💻 GitHub`select`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他`.*
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他`[]DIRECT`.*
+custom_proxy_group=📺 哔哩哔哩港澳台`select`[]🇨🇳 ‍中国自动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇸🇬 狮城自动`[]🎏 ‍其他`[]DIRECT`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🐟 Final兜底`select`[]🚀 节点选择`[]🥇 手动选择1`[]🥈 手动选择2`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇨🇳 ‍中国自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🇺🇲 ‍美国自动`[]🎏 ‍其他
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🐸 手动切换`select`.*
-custom_proxy_group=🛩️ 高速节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$
-custom_proxy_group= 🕊️便宜节点`select`(?=.*(0.5|0.5倍|0.5x))
-custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇸🇬 加坡节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🌐 其他地区`select`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore)).*)
-custom_proxy_group=🔯 香港故转`fallback`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⭐ 香港故转`fallback`!!GROUPID=!0!!(香港|HK|Hong Kong|🇭🇰|HongKong)(?!.*(深港|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⭐ 日本故转`fallback`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)(?!.*(深港|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 
 ;启用自定义规则集
 enable_rule_generator=true
 overwrite_original_rules=true
+skip_failed_links=true
